Prevent horizontal scrolling

--- a/client/noktime.css
+++ b/client/noktime.css
@@ -42,6 +42,15 @@
 
 	/* PAGES */
 
+	#main {
+      	position:absolute;
+        top:0px;
+        left:0px;
+        width:100%;
+        height: 100%;
+        overflow-x:hidden;
+	}
+
 	.page {
 		position: absolute;
     	top: 0; bottom: 0; right: 0; left: 0;
